# jenkins-example

./: CMakeLists.txt  Dockerfile  Jenkinsfile  my_test.c
